--- a/lib/stylesheets/style.css
+++ b/lib/stylesheets/style.css
@@ -81,12 +81,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   src: local("Hammersmith One"), url("fonts/HammersmithOne.woff") format("woff");
 }
 
-/* line 41, ../../src/sass/style.sass */
+/* line 46, ../../src/sass/style.sass */
 html {
   height: 100%;
 }
 
-/* line 46, ../../src/sass/style.sass */
+/* line 51, ../../src/sass/style.sass */
 body {
   font-family: Helvetica, Verdana, "LiHei Pro", "微軟正黑體", Arial, sans-serif;
   height: 100%;
@@ -94,12 +94,12 @@ body {
   background: #1e1e1e;
 }
 
-/* line 52, ../../src/sass/style.sass */
+/* line 57, ../../src/sass/style.sass */
 #templates {
   display: none;
 }
 
-/* line 55, ../../src/sass/style.sass */
+/* line 60, ../../src/sass/style.sass */
 #container {
   overflow: hidden;
   *zoom: 1;
@@ -107,19 +107,19 @@ body {
   margin: 20px auto;
 }
 
-/* line 60, ../../src/sass/style.sass */
+/* line 65, ../../src/sass/style.sass */
 #wave {
   float: left;
-  width: 750px;
+  width: 800px;
 }
 
-/* line 63, ../../src/sass/style.sass */
+/* line 68, ../../src/sass/style.sass */
 #meter {
   float: left;
   width: 200px;
 }
 
-/* line 67, ../../src/sass/style.sass */
+/* line 72, ../../src/sass/style.sass */
 .meter {
   -webkit-box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
   -moz-box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
@@ -133,7 +133,7 @@ body {
   font-size: 200%;
   text-align: center;
 }
-/* line 78, ../../src/sass/style.sass */
+/* line 83, ../../src/sass/style.sass */
 .meter .caption {
   color: #c8c8c8;
   height: 60px;
@@ -144,23 +144,23 @@ body {
   text-align: center;
 }
 
-/* line 87, ../../src/sass/style.sass */
+/* line 92, ../../src/sass/style.sass */
 .wave {
-  width: 700px;
+  width: 750px;
   height: 150px;
   margin: 20px 25px;
 }
-/* line 92, ../../src/sass/style.sass */
+/* line 97, ../../src/sass/style.sass */
 .wave .content {
   -webkit-box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
   -moz-box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
   box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
   text-shadow: 0 1px 1px black;
   border-radius: 4px;
-  width: 700px;
+  width: 750px;
   height: 150px;
 }
-/* line 98, ../../src/sass/style.sass */
+/* line 103, ../../src/sass/style.sass */
 .wave .caption {
   height: 60px;
   padding: 0 20px;
@@ -168,8 +168,77 @@ body {
   line-height: 60px;
   font-size: 200%;
 }
-/* line 105, ../../src/sass/style.sass */
+/* line 110, ../../src/sass/style.sass */
 .wave .value {
   color: gold;
   float: right;
+}
+
+/* line 114, ../../src/sass/style.sass */
+#phone {
+  -webkit-box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
+  -moz-box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
+  box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
+  text-shadow: 0 1px 1px black;
+  margin: 0 25px;
+  padding: 0 20px;
+  height: 60px;
+  border-radius: 4px;
+}
+/* line 121, ../../src/sass/style.sass */
+#phone #edit,
+#phone #number {
+  color: #787878;
+  height: 60px;
+  line-height: 60px;
+  font-size: 150%;
+}
+/* line 129, ../../src/sass/style.sass */
+#phone input {
+  border: none;
+  padding: 0 10px;
+  width: 140px;
+  background: inherit;
+  height: 30px;
+  line-height: 30px;
+  color: #787878;
+  font-size: 100%;
+  -webkit-box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
+  -moz-box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
+  box-shadow: #282828 0 1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0 inset;
+  text-shadow: 0 1px 1px black;
+}
+/* line 140, ../../src/sass/style.sass */
+#phone input:focus {
+  background: #282828;
+  outline: none;
+}
+/* line 144, ../../src/sass/style.sass */
+#phone #edit {
+  display: none;
+}
+/* line 147, ../../src/sass/style.sass */
+#phone button {
+  position: relative;
+  top: -4px;
+  -webkit-box-shadow: #282828 0 -1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0;
+  -moz-box-shadow: #282828 0 -1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0;
+  box-shadow: #282828 0 -1px 0, rgba(0, 0, 0, 0.5) 0 1px 3px 0;
+  text-shadow: 0 1px 1px black;
+  border-radius: 4px;
+  height: 30px;
+  line-height: 30px;
+  color: #787878;
+  background: inherit;
+  border: none;
+}
+/* line 158, ../../src/sass/style.sass */
+#phone button:hover {
+  background: #282828;
+  color: gold;
+}
+/* line 162, ../../src/sass/style.sass */
+#phone button:active {
+  background: #1e1e1e;
+  color: gold;
 }
