--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -54,6 +54,10 @@ body
     color: grey(200)
     background: grey(30)
     
+h1
+    margin: 20px 25px
+    font-size: 200%
+    
 #templates
     display: none    
 
