--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -68,40 +68,63 @@ h1
     
 #wave
     float: left
-    width: 800px
+    width: 850px
 #meter
     float: left
-    width: 200px
+    width: 150px
 
-.meter
+
+#thermometer
+    //+ditch
+    width: 150px
+    height: 320px
+    margin: 20px 0
+    line-height: 150px
+    font-size: 150%
+    text-align: center
+
+#thermometer-value
+    width: 100px
+    height: 60px
+    margin-top: -135px
+    line-height: 60px
+    text-align: center
+    color: rgb(180, 60, 60)
+        
+    
+#hydrometer
     +ditch
     width: 150px
     height: 150px
-    margin: 20px 25px
-    color: rgb(60, 120, 180)
+    margin: 20px 0
     line-height: 150px
+    text-align: center
+    
+#hydrometer-caption
+    width: 150px
+    height: 60px
+    line-height: 60px
     font-size: 200%
     text-align: center
     
-    
-    .caption
-        color: grey(200)
-        height: 60px
-        padding: 0 20px
-        margin-top: -150px
-        line-height: 60px
-        font-size: 50%
-        text-align: center
+#hydrometer-value
+    width: 150px
+    height: 90px
+    line-height: 90px
+    font-size: 200%
+    text-align: center
+    color: rgb(60, 120, 180)
+
 
 .wave
-    width: 750px
+    width: 830px
     height: 150px
-    margin: 20px 25px
+    margin: 20px 20px 20px 0
     
     .content    
         +ditch
         border-radius: 4px
-        width: 750px
+        width: 830px
         height: 150px
     
     .caption
@@ -117,13 +140,14 @@ h1
         
 #phone
     +ditch
-    margin: 0 25px
     padding: 0 20px
     height: 60px
     border-radius: 4px
     
     #edit,
-    #number
+    #number,
+    #sms
+        float: left
         color: grey(120)
         height: 60px
         line-height: 60px        
@@ -166,4 +190,8 @@ h1
         &:active
             background: grey(30)
             color: gold
+            
+    #sms
+        float: right
+        
             
